<resources>
    <string name="app_name" translatable="false">FaceBreak</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="toggle_turn_on">Front</string>
    <string name="toggle_turn_off">Back</string>
    <string name="name_camera_source_activity">Live Analysis</string>
    <string name="desc_camera_source_activity">Live view using your camera</string>
    <string name="name_still_image_activity">Photo Analysis</string>
    <string name="desc_still_image_activity">Still image from your photo gallery or from the camera</string>
    <string name="download_error">Download error</string>
    <string name="start_over">Start over</string>
    <string name="menu_item_settings">Settings</string>
    <string name="select_image">Select image</string>
    <string name="pref_screen" translatable="false">ps</string>
    <string name="pref_screen_title_live_preview">FaceBreak Settings</string>
    <string name="pref_category_info">Detection Info</string>
    <string name="pref_category_face_detection">Face Detection</string>
    <string name="pref_category_key_camera" translatable="false">pckc</string>
    <string name="pref_category_title_camera">Camera</string>
    <string name="pref_entry_values_color_red">Red</string>
    <string name="pref_entry_values_color_green">Green</string>
    <string name="pref_entry_values_color_blue">Blue</string>
    <string name="pref_entry_values_color_yellow">Yellow</string>
    <string name="pref_entry_values_color_black">Black</string>
    <string name="pref_entry_values_color_white">White</string>
    <string name="pref_entry_values_color_dark_gray">Dark Gray</string>
    <string name="pref_entry_values_color_light_gray">Light Gray</string>
    <string name="pref_entry_values_color_cyan">Cyan</string>
    <string name="pref_entry_values_color_magenta">Magenta</string>
    <string name="pref_entry_values_color_transparent">Transparent</string>
    <string name="pref_entry_values_size_very_large">Very Large</string>
    <string name="pref_entry_values_size_large">Large</string>
    <string name="pref_entry_values_size_medium">Medium</string>
    <string name="pref_entry_values_size_small">Small</string>
    <string name="pref_entry_values_size_very_small">Very Small</string>
    <string name="pref_title_face_detector_performance_mode">Performance mode</string>
    <string name="pref_key_live_preview_face_detection_performance_mode" translatable="false">lpfdpm</string>
    <string name="pref_entries_face_detector_performance_mode_fast">Fast and accurate</string>
    <string name="pref_entries_face_detector_performance_mode_accurate">Slow and even more accurate</string>
    <string name="pref_entry_values_face_detector_performance_mode_fast" translatable="false">1</string>
    <string name="pref_entry_values_face_detector_performance_mode_accurate" translatable="false">2</string>
    <string name="pref_title_segmentation_raw_size_mask">Enable raw size mask</string>
    <string name="pref_key_segmentation_raw_size_mask" translatable="false">srsm</string>
    <string name="select_image_from_gallery">Select Image From Gallery</string>
    <string name="take_picture">Take Picture</string>
    <string name="select_feature">Select Feature</string>
    <string name="space" translatable="false" />
    <string name="switch_camera_view">Switch Camera View</string>
    <string name="analyze_live_video">Analyze Live Video</string>
    <string name="live_video">Live Video</string>
    <string name="image_preview">Image Preview</string>
    <string name="share_results">Share Results</string>
    <string name="no_camera_permission_detected">Grant Camera permission if you would like to enable the amazing live video feature</string>
    <string name="no_camera_detected_message">No Camera Detected</string>
    <string name="failed_to_launch_image_browser_exception">Failed to display the image browser</string>
    <string name="failed_to_connect_to_camera_exception_message">Failed to connect to the camera</string>
    <string name="failed_to_load_and_classify_image_exception">Failed to load and classify image</string>
    <string name="failed_to_reset_image_exception">Failed to reset image</string>
    <string name="failed_to_share_image_exception">Failed to share image</string>
    <string name="send_to_title">Send to…</string>
    <string name="failed_to_start_live_preview_exception">Failed to start live preview</string>
    <string name="new_picture_title">New Picture</string>
    <string name="from_camera_description">From Camera</string>
    <string name="select_picture_title">Select Picture</string>
    <string name="preferences_title">Preferences</string>
    <string name="failed_to_update_image_preview_exception">Failed to update image preview</string>
    <string name="failed_to_classify_displayed_image_exception">Failed to classify displayed image</string>
    <string name="image_process_is_null_exception">Image process is null</string>
    <string name="failed_to_create_image_processor_exception">Failed to create image processor</string>
    <string name="failed_to_show_preferences_exception">Failed to show preferences</string>
    <string name="failed_to_start_camera_source_exception">Failed to start camera source</string>
    <string name="failed_to_initialize_camera_source_exception">Failed to initialize camera source for model</string>
    <string name="classifier_detect_ancestry">Ancestry</string>
    <string name="classifier_detect_age">Age</string>
    <string name="classifier_character">Character</string>
    <string name="classifier_character_flaws">Character Flaws</string>
    <string name="classifier_emotions">Emotions</string>
    <string name="classifier_eye_color">Eye Color</string>
    <string name="classifier_face_shape">Face Shape</string>
    <string name="classifier_gender">Gender</string>
    <string name="classifier_hair_color">Hair Color</string>
    <string name="classifier_hair_style">Hair Style</string>
    <string name="classifier_physical_features">Physical Features</string>
    <string name="preference_rectangle_line_width_dialog_message">Line width of the rectangle surrounding the face</string>
    <string name="preference_rectangle_line_width_summary">Line width of the rectangle surrounding the face</string>
    <string name="preference_rectangle_line_width_title">Rectangle line width</string>
    <string name="preference_rectangle_color_title">Rectangle color</string>
    <string name="preference_rectangle_color_summary">Color of the rectangle surrounding the face</string>
    <string name="preference_text_color_summary">Font color used for the artificial intelligence\'s amazing analysis of the face</string>
    <string name="preference_text_color_title">Font color</string>
    <string name="preference_font_size_title">Font size</string>
    <string name="preference_font_size_summary">Font size used for the artificial intelligence\'s astonishingly accurate analysis of the face</string>
    <string name="preference_analysis_time_dialog_message">Number of seconds to spend analyzing live video of the face. Large numbers give more stable results, while small numbers give results that update more frequently.</string>
    <string name="preference_analysis_time_summary">Number of seconds to spend analyzing live video of the face</string>
    <string name="preference_analysis_time_title">Analysis time</string>
    <string name="preference_category_prediction">Prediction</string>
    <string name="preference_category_licenses">Licenses</string>
    <string name="preference_licenses_title">Open Source Licenses</string>
    <string name="preference_licenses_summary">All of the cool free stuff that made this app possible</string>
    <string name="preference_licenses_close">Close</string>
    <string name="preference_performance_mode_summary">Whether to be fast and accurate or slow and unbelievably accurate</string>
    <string name="preference_category_display">Display</string>
    <string name="failed_to_obtain_consent">Failed to obtain consent:</string>
    <string name="failed_to_load_consent_form">Failed to load consent form:</string>
    <string name="pref_category_privacy">Privacy</string>
    <string name="pref_privacy_analytics_summary">Allow collection of statistics about screen views, options, and geographic regions</string>
    <string name="pref_privacy_analytics_title">Usage data</string>
    <string name="pref_privacy_personalized_ads_summary">Show advertisements based on your interests and browse history</string>
    <string name="pref_privacy_personalized_ads_title">Personalized ads</string>
    <string name="pref_privacy_in_app_reviews_summary">Allow this app to ask you for a review, if you have not done so yet</string>
    <string name="pref_privacy_in_app_reviews_title">In-App review</string>
    <string name="preference_category_premium_status">Premium Status</string>
    <string name="product_info_unavailable">Unavailable</string>
    <string name="premium_status_you_are_using_the_free_version">You are using the Free version</string>
    <string name="premium_status_you_are_using_the_premium_version">You are using the Premium version</string>
    <string name="premium_status_your_premium_payment_is_pending">Your Premium purchase is pending</string>
    <string name="premium_status_description_upgrade_to_unlock_capabilities">Upgrade to unlock phenomenal, additional capabilities!</string>
    <string name="premium_status_description_premium_customer">You are an elite patron, the best of the best of the best! Of the best!</string>
    <string name="premium_status_description_premium_pending">Great things await you, as soon as your payment is processed! Visit pay.google.com to resolve any payment issues.</string>
    <string name="preference_premium_status_title">Premium Status</string>
    <string name="preference_premium_status_summary">Whether you are using the free or premium version</string>
    <string name="product_image_view">Product image</string>
    <string name="purchase_premium_button_text">Purchase Premium!</string>
    <string name="back_button_text">Back</string>
    <string name="free_or_premium_image_view_description">Free or Premium image</string>
    <string name="message_purchase_pending">Purchase pending.</string>
    <string name="message_premium_purchased">Premium version purchased! Order ID: </string>
    <string name="failed_to_show_premium_status_dialog_exception">Failed to show Premium status dialog</string>
    <string name="message_purchase_canceled">Purchase canceled.</string>
    <string name="message_payment_declined">Payment declined.</string>
    <string name="message_purchase_invalid">Purchase is invalid.</string>
    <string name="brought_to_you_by">prediction brought to you by</string>
    <string name="apparent_age">Apparent age:</string>
    <string name="to">to</string>
    <string name="ancestry_central_and_south_america">Central and South America</string>
    <string name="ancestry_china">China</string>
    <string name="ancestry_east_africa">East Africa (Somalia, Kenya, Ethiopia, Eritrea)</string>
    <string name="ancestry_eastern_european">Eastern Europe (Poland, Czech Republic, Romania, Bulgaria, Russia)</string>
    <string name="ancestry_england">England</string>
    <string name="ancestry_ireland">Ireland, Scotland and Wales</string>
    <string name="ancestry_japan_and_korea">Japan and Korea</string>
    <string name="ancestry_north_africa">North Africa and the Middle East</string>
    <string name="ancestry_north_america">North America</string>
</resources>