<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:textAlignment="textStart">
    <PreferenceCategory
        android:textAlignment="textStart"
        android:title="@string/preference_category_display">

        <EditTextPreference
            android:defaultValue="5.0"
            android:dialogMessage="@string/preference_rectangle_line_width_dialog_message"
            android:key="pref_key_face_box_line_width"
            android:selectAllOnFocus="true"
            android:summary="@string/preference_rectangle_line_width_summary"
            android:textAlignment="textStart"
            android:title="@string/preference_rectangle_line_width_title"
            app:persistent="true" />
        <ListPreference
            android:defaultValue="@string/pref_entry_values_color_green"
            android:entries="@array/pref_entry_values_face_box_line_color"
            android:entryValues="@array/pref_entry_values_face_box_line_color"
            android:key="pref_key_face_box_line_color"
            android:title="@string/preference_rectangle_color_title"
            app:persistent="true"
            android:summary="@string/preference_rectangle_color_summary" />
        <ListPreference
            android:defaultValue="@string/pref_entry_values_color_white"
            android:entries="@array/pref_entry_values_classifier_text_color"
            android:entryValues="@array/pref_entry_values_classifier_text_color"
            android:key="pref_key_classifier_text_color"
            android:summary="@string/preference_text_color_summary"
            android:title="@string/preference_text_color_title"
            app:persistent="true" />
        <ListPreference
            android:defaultValue="@string/pref_entry_values_size_medium"
            android:entries="@array/pref_entry_values_classifier_text_size"
            android:entryValues="@array/pref_entry_values_classifier_text_size"
            android:key="pref_key_classifier_text_size"
            android:title="@string/preference_font_size_title"
            app:persistent="true"
            android:summary="@string/preference_font_size_summary" />

    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_category_face_detection">

        <ListPreference
            android:defaultValue="@string/pref_entry_values_face_detector_performance_mode_fast"
            android:entries="@array/pref_entries_face_detector_performance_mode"
            android:entryValues="@array/pref_entry_values_face_detector_performance_mode"
            android:key="lpfdpm"
            android:title="@string/pref_title_face_detector_performance_mode"
            android:summary="@string/preference_performance_mode_summary" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preference_category_prediction">
        <EditTextPreference
            android:defaultValue="5"
            android:dialogMessage="@string/preference_analysis_time_dialog_message"
            android:inputType="numberDecimal"
            android:key="pref_key_live_preview_prediction_averaging_seconds"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:summary="@string/preference_analysis_time_summary"
            android:title="@string/preference_analysis_time_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preference_category_premium_status">
        <com.thomasjbarrerasconsulting.faces.preference.PremiumStatusDialogPreference
            android:title="Premium Status"
            android:summary="Foo"
            android:negativeButtonText="Bar" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_category_privacy">

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_key_google_analytics"
            android:summary="@string/pref_privacy_analytics_summary"
            android:title="@string/pref_privacy_analytics_title" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_key_personalized_ads"
            android:summary="@string/pref_privacy_personalized_ads_summary"
            android:title="@string/pref_privacy_personalized_ads_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preference_category_licenses">
        <com.thomasjbarrerasconsulting.faces.preference.OpenSourceDialogPreference
            android:title="@string/preference_licenses_title"
            android:summary="@string/preference_licenses_summary"
            android:negativeButtonText="@string/preference_licenses_close" />
    </PreferenceCategory>
</PreferenceScreen>