<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:key="@string/pref_screen">

  <PreferenceCategory android:title="Display">

    <EditTextPreference
        android:defaultValue="5.0"
        android:dialogMessage="Thickness of the line used for the box surrounding a face."
        android:inputType="numberDecimal"
        android:key="pref_key_face_box_line_width"
        android:selectAllOnFocus="false"
        android:singleLine="false"
        android:summary="Thickness of the line used for the box surrounding a face"
        android:title="Face box line width" />
    <ListPreference
        android:defaultValue="Green"
        android:entries="@array/pref_entry_values_face_box_line_color"
        android:entryValues="@array/pref_entry_values_face_box_line_color"
        android:key="pref_key_face_box_line_color"
        android:persistent="true"
        android:summary="Color of the line used for the box surrounding a face"
        android:title="Face box line color" />
    <ListPreference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:defaultValue="White"
        android:entries="@array/pref_entry_values_classifier_text_color"
        android:entryValues="@array/pref_entry_values_classifier_text_color"
        android:key="pref_key_classifier_text_color"
        android:persistent="true"
        android:summary="Font color used for the artificial intelligence's predictions about the face"
        android:title="Font color" />
    <ListPreference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:defaultValue="Medium"
        android:entries="@array/pref_entry_values_classifier_text_size"
        android:entryValues="@array/pref_entry_values_classifier_text_size"
        android:key="pref_key_classifier_text_size"
        android:persistent="true"
        android:summary="Font size of the artificial intelligence's predictions about the face"
        android:title="Font size" />
  </PreferenceCategory>

  <PreferenceCategory
      android:title="@string/pref_category_face_detection">

    <ListPreference
        android:defaultValue="@string/pref_entry_values_face_detector_performance_mode_fast"
        android:entries="@array/pref_entries_face_detector_performance_mode"
        android:entryValues="@array/pref_entry_values_face_detector_performance_mode"
        android:key="@string/pref_key_live_preview_face_detection_performance_mode"
        android:persistent="true"
        android:summary="Prediction speed vs. accuracy"
        android:title="@string/pref_title_face_detector_performance_mode" />

  </PreferenceCategory>
  <PreferenceCategory android:title="Prediction">

  </PreferenceCategory>
  <EditTextPreference
      android:defaultValue="5"
      android:dialogMessage="Number of seconds over which to average predictions. The smaller the number, the faster predictions are updated."
      android:inputType="numberDecimal"
      android:key="pref_key_live_preview_prediction_averaging_seconds"
      android:selectAllOnFocus="true"
      android:singleLine="true"
      android:summary="Number of seconds over which to average predictions"
      android:title="Averaging time" />

</PreferenceScreen>
