<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/still_parent_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <ImageView
      android:id="@+id/preview"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:contentDescription="@string/image_preview"
      app:layout_constraintBottom_toTopOf="@+id/toolbar"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintTop_toBottomOf="@id/adView" />

  <com.thomasjbarrerasconsulting.faces.GraphicOverlay
      android:id="@+id/graphic_overlay"
      android:layout_width="0dp"
      android:layout_height="0dp"
      app:layout_constraintBottom_toBottomOf="@id/preview"
      app:layout_constraintStart_toStartOf="@id/preview"
      app:layout_constraintTop_toTopOf="@id/preview"
      app:layout_constraintWidth="match_parent" />

  <ImageView
      android:id="@+id/premium_status_image_view"
      layout="@layout/settings_style"
      android:layout_width="24dp"
      android:layout_height="24dp"
      android:layout_marginStart="10dp"
      android:layout_marginBottom="12dp"
      android:background="@drawable/ic_free"
      android:contentDescription="@string/free_or_premium_image_view_description"
      app:layout_constraintBottom_toBottomOf="@id/settings_image_view"
      app:layout_constraintStart_toStartOf="parent" />

  <include
      android:id="@+id/settings_image_view"
      layout="@layout/settings_style"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:foreground="?attr/selectableItemBackground"
      app:layout_constraintRight_toRightOf="@id/still_parent_layout"
      tools:layout_editor_absoluteY="0dp" />

  <!-- TODO: Replace the test adUnitId with the real one: ca-app-pub-5555304935446174/8806775376 -->
  <!-- TODO: For general testing replace the real adUnitId with the test one: ca-app-pub-3940256099942544/6300978111 -->
  <com.google.android.gms.ads.AdView
      android:id="@+id/adView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:adSize="BANNER"
      app:adUnitId="ca-app-pub-5555304935446174/8806775376"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <LinearLayout
      android:id="@id/toolbar"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="#000"
      android:orientation="vertical"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintLeft_toLeftOf="parent">

    <LinearLayout
        android:id="@+id/control2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#000"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

      <Button
          android:id="@+id/launchLiveView"
          android:layout_width="48dp"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:layout_weight="0"
          android:background="@android:drawable/ic_menu_view"
          android:contentDescription="@string/live_video"
          android:foreground="?attr/selectableItemBackground" />

      <Button
          android:id="@+id/selectImage"
          style="@style/Widget.AppCompat.Button"
          android:layout_width="48dp"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:layout_weight="0"
          android:background="@android:drawable/ic_menu_gallery"
          android:contentDescription="@string/select_image_from_gallery"
          android:foreground="?attr/selectableItemBackground" />

      <Button
          android:id="@+id/takePicture"
          style="@style/Widget.AppCompat.Button"
          android:layout_width="48dp"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:background="@android:drawable/ic_menu_camera"
          android:contentDescription="@string/take_picture"
          android:foreground="?attr/selectableItemBackground" />

      <Spinner
          android:id="@+id/feature_selector"
          style="@style/Widget.AppCompat.Light.Spinner.DropDown.ActionBar"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_gravity="center"
          android:layout_weight="1"
          android:contentDescription="@string/select_feature"
          android:foreground="?attr/selectableItemBackground" />

      <Button
          android:id="@+id/share"
          style="@style/Widget.AppCompat.Button"
          android:layout_width="46dp"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:layout_weight="0"
          android:background="@android:drawable/ic_menu_share"
          android:contentDescription="@string/share_results"
          android:foreground="?attr/selectableItemBackground" />
    </LinearLayout>
  </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
