<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true">

  <com.thomasjbarrerasconsulting.faces.CameraSourcePreview
      android:id="@+id/preview_live_view"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintBottom_toTopOf="@+id/toolbar">

  </com.thomasjbarrerasconsulting.faces.CameraSourcePreview>

  <com.thomasjbarrerasconsulting.faces.GraphicOverlay
      android:id="@+id/graphic_overlay"
      android:layout_width="0dp"
      android:layout_height="0dp"
      app:layout_constraintLeft_toLeftOf="@id/preview_live_view"
      app:layout_constraintRight_toRightOf="@id/preview_live_view"
      app:layout_constraintTop_toTopOf="@id/preview_live_view"
      app:layout_constraintBottom_toBottomOf="@id/preview_live_view"/>

  <include
      android:id="@+id/settings_image_view"
      layout="@layout/settings_style"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:foreground="?attr/selectableItemBackground"
      app:layout_constraintRight_toRightOf="@id/preview_live_view"
      app:layout_constraintTop_toTopOf="@id/preview_live_view" />

  <TextView
      android:id="@+id/messageTextView"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:clickable="false"
      android:gravity="center"
      android:minHeight="48dp"
      android:textAlignment="center"
      android:textStyle="italic"
      app:layout_constraintBottom_toTopOf="@id/toolbar"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <LinearLayout
      android:id="@id/toolbar"
      android:layout_width="match_parent"
      android:layout_height="60dp"
      app:layout_constraintBottom_toBottomOf="parent"
      android:background="#000"
      android:orientation="horizontal">

    <Button
        android:id="@+id/launchStillImageAndSelectImage"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:background="@android:drawable/ic_menu_gallery"
        android:contentDescription="@string/select_image_from_gallery"
        android:foreground="?attr/selectableItemBackground"
        android:paddingStart="1dp"
        android:paddingLeft="1dp"
        android:paddingTop="1dp"
        android:paddingEnd="1dp"
        android:paddingRight="1dp"
        android:paddingBottom="1dp" />

    <Button
        android:id="@+id/launchStillImageAndUseCamera"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:background="@android:drawable/ic_menu_camera"
        android:contentDescription="@string/take_picture"
        android:foreground="?attr/selectableItemBackground"
        android:padding="1dp"
        android:paddingStart="1dp"
        android:paddingLeft="1dp"
        android:paddingTop="1dp"
        android:paddingEnd="1dp"
        android:paddingRight="1dp"
        android:paddingBottom="1dp" />

    <Spinner
        android:id="@+id/feature_selector"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:contentDescription="@string/select_feature"
        android:foreground="?attr/selectableItemBackground"
        android:minHeight="48dp" />

    <ToggleButton
        android:id="@+id/facing_switch"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:background="@drawable/ic_switch_camera_white_48dp"
        android:checked="true"
        android:contentDescription="@string/switch_camera_view"
        android:foreground="?attr/selectableItemBackground"
        android:textOff="@string/space"
        android:textOn="@string/space" />

    <Button
        android:id="@+id/share"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0"
        android:background="@android:drawable/ic_menu_share"
        android:contentDescription="@string/share_results"
        android:foreground="?attr/selectableItemBackground" />

  </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
